# gp4pc

./: CMakeLists.txt  NOTICE.txt  README.md
cmake/: FindEigen.cmake  FindGlog.cmake  GoogleTest.CmakeLists.txt.in  OptimizeCompilerFlags.cmake
src/gp4pc/: camera_feature_correspondence_2d_3d.h  estimate_similarity_transformation.cc  estimate_similarity_transformation.h  estimate_similarity_transformation_test.cc  gp4pc.cc  gp4pc.h  gp4pc_robust_estimator.cc  gp4pc_robust_estimator.h  gp4pc_test.cc  pinhole_camera.cc  pinhole_camera.h  pinhole_camera_test.cc  util.cc  util.h
src/math/: solve_gp4pc_polynomial.cc  solve_gp4pc_polynomial.h  solve_gp4pc_polynomial_test.cc  utils.h
test/: test_main.cc
